# rust-snake-online

./: .gitignore  README.md  build.sh
backend/: package-lock.json  package.json
backend/public/: index.html  output-5585f3d4e070afd9.css
backend/src/: server.ts
client/: index.html  package-lock.json
client/styles/: main.css
frontend/: Cargo.toml  package.json  tailwind.config.js
frontend/src/: game_grid.rs  main.rs  network.rs
server/: package-lock.json  package.json  tsconfig.json
server/src/: server.ts  types.ts
