[package]
name = "craby-snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
rand = "0.8.5"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

# WebSocket stuff
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4"
console_log = "0.2" # A logging backend for WebAssembly and web browsers (if using WASM).
console_error_panic_hook = "0.1"